<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.iqra</groupId>
	<artifactId>contact-management</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>contact-management</name>
	<description>REST API for user registration and personal contact management</description>
	<properties>
		<java.version>17</java.version>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.organization>iqrashah110</sonar.organization>
		<sonar.projectKey>IqraShah110_contact-management-system</sonar.projectKey>
		<sonar.projectBaseDir>${project.basedir}/..</sonar.projectBaseDir>
		<sonar.sources>backend/src/main/java,frontend/src</sonar.sources>
		<sonar.tests>backend/src/test/java</sonar.tests>
		<sonar.java.binaries>backend/target/classes</sonar.java.binaries>
		<sonar.java.test.binaries>backend/target/test-classes</sonar.java.test.binaries>
		<sonar.coverage.jacoco.xmlReportPaths>
			${project.basedir}/target/site/jacoco/jacoco.xml
		</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.javascript.file.suffixes>.js,.jsx</sonar.javascript.file.suffixes>
		<sonar.exclusions>**/node_modules/**,**/dist/**,**/target/**,**/*.svg,**/*.png,**/package-lock.json</sonar.exclusions>
		<sonar.qualitygate.wait>false</sonar.qualitygate.wait>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>4.0.0.4121</version>
			</plugin>
		</plugins>
	</build>

</project>
